# FYP_Simulation

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
enki/examples/playground/: .~lock.Post_Eval_Simplified.ods#  A15,B31,C31,D22,E15,F21.csv  A5,B22,C27,D22,E15,F24.csv  Analysis.csv  Analysis.sh  Analysis_Noise_boxplots.py  Analysis_Noise_plots.py  Analysis_Simplified.csv  Analysis_Speed0.25.csv  Analysis_Speed2.csv  Analysis_boxplots.py  Analysis_boxplots_VaryingSheepSpeed.py  Analysis_dissert.csv  Analysis_plots.py  Analysis_plots_varyingProportion.py  Analysis_simplified_rerun_Evo18.csv.csv  Auto_Noise.sh  Auto_PostEval.sh  Auto_analysis.sh  Auto_analysis_varyingSpeed.sh  Auto_analysis_varying_proportion.sh  CMakeLists.txt  CTestTestfile.cmake  GenerateAnimations.sh  GenerateVelocityPlots.sh  Logfile_Analysis_Tool.py  Makefile  Noise.csv  Optimisation_Logfile.csv  Output.csv  Parallel_Coordinates_Plot.py  Parameters (copy).cfg  Parameters.cfg  Playground(Old).cpp  Playground.cpp  Post_Eval.py  Post_Eval.sh  Post_Eval0.3.csv  Post_Eval1.2.csv  Post_Eval1.3.csv  (+21 more)
enki/examples/playground/Analysis Files/: A1,B30,C28,D18.csv  A10,B27,C4,D18.csv  A15,B31,C2,D22,E15,F14.csv  A28,B30,C24,D18.csv  A_dissert,B_dissert,C_dissert,D18.csv  Analysis_Paper.csv  Analysis_Speed0.1.csv  Analysis_Speed0.5.csv  Analysis_VaryingProportion.csv  Analysis_simplified_rerun_Evo20.csv  Analysis_simplified_rerun_Evo8.csv  Noise.csv
enki/examples/playground/Analysis Plots/: NoiseD.csv
enki/examples/playground/Animations/: ChosenPics.csv
enki/examples/playground/Archive/: bestParam4.txt
enki/examples/playground/Optimisation 1/: BestParam.txt
enki/examples/playground/Optimisation 3/: bestParam.txt
enki/examples/playground/Optimisation 4/: bestParam.txt
enki/examples/playground/Post_Evaluation files/: Post_Eval0.4.csv  Post_Eval1.4.csv  Post_Eval2.2.csv  Post_Eval2.3.csv  Post_Eval2.4.csv  Post_EvalCD.A3.csv  Post_EvalCD.B1.csv  Post_EvalCD.B4.csv  Post_EvalCD1.csv  Post_EvalHetero.csv  Post_Eval_0.2.csv  (+6 more)
(+373 files in other folders)
